...
                                        <color key="textColor" systemColor="labelColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                    </textView>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Type your category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tIU-jD-aYQ">
                                        <rect key="frame" x="10" y="202" width="274" height="38"/>
                                        <accessibility key="accessibilityConfiguration" identifier="categoryTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="search"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rEp-fU-w5v">
                                        <rect key="frame" x="289" y="202" width="45" height="38"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="searchBtn" label="searchBtn">
                                            <accessibilityTraits key="traits" staticText="YES"/>
                                        </accessibility>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" image="right-arrow-4"/>
                                        <connections>
                                            <action selector="SearchAct:" destination="2Se-eT-xja" eventType="touchUpInside" id="ndr-uk-Qky"/>
...
                                    <subviews>
                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="42l-4w-8sP">
                                            <rect key="frame" x="20" y="11" width="312" height="58"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WrE-q2-Pw0">
                                                    <rect key="frame" x="0.0" y="0.0" width="312" height="32"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="TitleName" label="TitleName"/>
                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnK-W0-Z6K">
                                                    <rect key="frame" x="0.0" y="40" width="312" height="18"/>
...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="2WF-Um-xGv" id="dDH-0Q-mGe"/>
                            <outlet property="delegate" destination="2WF-Um-xGv" id="zNd-Db-Je4"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="INDIA TODAY" id="cXg-13-Vr1"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="gtF-UQ-IZi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="2581" y="-382"/>
        </scene>
        <!--Navigation Controller-->
...
